external-proxy/http-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - appProtocol: https
      name: https
      port: 8443
      protocol: TCP
      targetPort: 8443
    - appProtocol: http
      name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: http
  sessionAffinity: None
  type: ClusterIP
